# colormix-cpp

./: CMakeLists.txt  Makefile  README.md
include/: colormix.h
src/: colormix.cpp  main.cpp
